--- a/style/main.css
+++ b/style/main.css
@@ -9,9 +9,11 @@
   box-sizing: border-box;
 }
 
+/*elementos base*/
 body{
   background: var(--preto);
   font-family: 'Times New Roman', Times, serif;
+  color: white;
 }
 
 header .container{
@@ -36,4 +38,32 @@ header nav a{
 
 header nav a:hover{
   color: #fff;
+}
+
+/*filme principal*/
+
+.filme-principal {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: flex-start;
+  font-size: 16px;
+  background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),url(/img/peaky-blinders-wallpaper.jpg);
+  height: 400px;
+  background-size: cover;
+}
+
+.filme-principal .descricao {
+  margin-bottom: 40px;
+}
+
+.titulo {
+  font-size: 40px;
+}
+
+.botao{
+  background-color: rgba(0,0,0,.50);
+  color: white;
+  padding: 10px;
+  border: none;
 }
