--- a/style/main.css
+++ b/style/main.css
@@ -54,16 +54,32 @@ header nav a:hover{
 }
 
 .filme-principal .descricao {
+  margin-top: 10px;
   margin-bottom: 40px;
 }
 
-.titulo {
+.filme-principal .titulo {
   font-size: 40px;
+  margin-top: 10%;
+  font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
 }
 
 .botao{
   background-color: rgba(0,0,0,.50);
   color: white;
-  padding: 10px;
+  padding: 12px;
   border: none;
+  margin-right: 15px;
+  font-size: 12px;
+  cursor: pointer;
+  transition: .3s ease all;
+}
+
+.botao:hover{
+  background-color: #fff;
+  color: black;
+}
+
+.botao i{
+  margin-right: 5px;
 }
